# cpp-lab

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt
src/algo/sorting/: CMakeLists.txt  qsort.h
src/algo/sorting/details/: qsort.cpp
src/common/: CMakeLists.txt  shell.h
src/common/details/: logger.cpp  shell.cpp
src/common/type_traits/: CMakeLists.txt  type_traits.cpp
src/linux/: CMakeLists.txt
src/linux/ftrace/: CMakeLists.txt  ftracer.cpp
src/tasks/: CMakeLists.txt
src/tasks/markov_gen/: CMakeLists.txt  markov_compiler.cpp  markov_generator.cpp
src/tasks/markov_gen/details/: CMakeLists.txt
